<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.nearmeplaces.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_below="@+id/tool_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:onClick="onHospitalClick"
                    android:background="@drawable/pressed_state"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/health"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/hospital"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:text="@string/health_label"
                        android:textSize="17sp"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:onClick="onSchoolClick"
                    android:background="@drawable/pressed_state"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/education"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/school"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:text="@string/education_label"
                        android:textSize="17sp"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:onClick="onShoppingClick"
                    android:background="@drawable/pressed_state"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/shopping"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/shopping"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:text="@string/shopping_label"
                        android:textSize="17sp"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:onClick="onSportsClick"
                    android:background="@drawable/pressed_state"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/sports"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/sports"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:text="@string/sports_label"
                        android:textSize="17sp"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:onClick="onTravelClick"
                    android:background="@drawable/pressed_state"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/travel"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/travel"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:text="@string/travel_label"
                        android:textSize="17sp"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:onClick="onRestaurantClick"
                    android:background="@drawable/pressed_state"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/restaurant"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/restaurant"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:text="@string/restaurant_label"
                        android:textSize="17sp"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:onClick="onFinanceClick"
                    android:background="@drawable/pressed_state"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/finance"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/finance"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:text="@string/finance_label"
                        android:textSize="17sp"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:onClick="onReligionClick"
                    android:background="@drawable/pressed_state"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/religion"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/religion"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:text="@string/religion_label"
                        android:textSize="17sp"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>
